<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright (c) 2016 Krumbs Inc
  ~ All rights reserved.
  ~
  -->
<resources>
    <string name="krumbssdk_app_id">ON4H3OijU46ZiBTKsnkuZJONY1L1msWlPlLSRHdE</string>
    <string name="krumbssdk_client_key">s1SerXUnQRLWisF0znOktI0tRntsmFZY6MXWtSc3</string>

    <string name="app_name">UCI Connect</string>

    <string name="hello_world">Hello World!</string>
    <string name="action_settings">Settings</string>
    <string name="kcapturebuttonLabel">Sell Stuff</string>
    <string name="kBuyStuffLabel">Buy Stuff</string>
    <string name="title_activity_buyer_categories">Buy Stuff</string>
    <string name="appliancesString"><u>Appliances</u></string>
    <string name="electronicsString"><u>Electronics</u></string>
    <string name="transportString"><u>Transport</u></string>
    <string name="furnitureString"><u>Furniture</u></string>
    <string name="miscellaneousString"><u>Miscellaneous</u></string>
    <string name="title_activity_results">ResultsActivity</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_show_image">ShowImageActivity</string>

</resources>
